# magicdog-y1_sdk

./: .cmake-format.py  CMakeLists.txt  LICENSE  README.md  build.sh  format.sh
cmake/: magicdog_y1_sdkConfig.cmake.in  magicdog_y1_sdkTargets.cmake
doc/source/: conf.py  index.rst
doc/source/cpp_api/: 1.robot_reference.md  2.high_level_motion_reference.md  3.low_level_motion_reference.md  4.sensor_reference.md  5.audio_reference.md  6.monitor_reference.md  7.slam_navigation_reference.md
doc/source/examples/: 1.high_level_motion_example.md  2.low_level_motion_example.md  3.sensor_example.md  4.audio_example.md  5.monitor_example.md
doc/source/overview/: 1.overview_reference.md  2.architecture_reference.md  3.service_reference.md  4.quick_start_reference.md
doc/source/python_api/: 1.robot_reference.md  2.high_level_motion_reference.md  3.low_level_motion_reference.md  4.sensor_reference.md  5.audio_reference.md  6.monitor_reference.md  7.slam_navigation_reference.md
example/cmake_example/: CMakeLists.txt  cmake_example.cpp
example/cpp/: CMakeLists.txt
example/cpp/audio_example/: CMakeLists.txt  README.txt  audio_example.cpp
example/cpp/high_level_motion_example/: CMakeLists.txt  README.txt  high_level_motion_example.cpp
example/cpp/low_level_motion_example/: CMakeLists.txt  README.txt  low_level_motion_example.cpp
example/cpp/monitor_example/: CMakeLists.txt  README.txt  monitor_example.cpp
example/cpp/sensor_example/: CMakeLists.txt  README.txt  sensor_example.cpp
example/cpp/slam_navigation_example/: CMakeLists.txt  README.txt  navigation_example.cpp  slam_example.cpp
example/pybind11_test/: test_audio_stream.py  test_binocular_camera_frame.py  test_camerainfo.py  test_hand_structures.py  test_image.py  test_imu.py  test_joint_structures.py  test_joystick_command.py  test_nav_status.py  test_navigation_structures.py  test_odometry.py  test_pointcloud2.py  test_pointfield.py  test_precision_comparison.py  test_robot_state.py  test_spatial_structures.py  test_status.py  test_tts_command.py
example/python/: README.md  audio_example.py  dump_robot_state.py  full_api_smoke.py  high_level_motion_example.py  keyboard_motion_test.py  low_level_motion_example.py  minimal_slam_nav_example.py  monitor_example.py  navigation_example.py  sensor_example.py  slam_and_navi_basic.py  slam_example.py
include/: magic_audio.h  magic_err.h  magic_export.h  magic_motion.h  magic_robot.h  magic_sdk_version.h  magic_sensor.h  magic_slam_navigation.h  magic_state_monitor.h  magic_type.h
